[metadata]
name = exorad
version = 2.1.121
author = Lorenzo V. Mugnai, Enzo Pascale
author_email = lorenzo.mugnai@uniroma1.it
description = The generic point source radiometric model
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Claus
url = https://github.com/ExObsSim/ExoRad2-public
project_urls = 
	Bug Tracker = https://github.com/ExObsSim/ExoRad2-public/issues
	Source Code = https://github.com/ExObsSim/ExoRad2-public
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
zip_safe = True
packages = exorad
include_package_data = True
python_requires = >3.8
install_requires = 
		astropy
		matplotlib
		mpmath
		numpy
		pyyaml==5.3.1
		scipy
		h5py>=3.2
		hdfdict==0.3.1
		xlrd==1.2.0
		xlwt
		requests
		photutils
		pandas

[options.extras_require]
docs = 
	sphinx~=4.4
	sphinxcontrib-napoleon
	sphinxcontrib-jsmath
	nbsphinx
	pydata-sphinx-theme
test = 
	codecov
	flake8
	pytest

[options.entry_points]
console_scripts = 
    exorad=exorad.exorad:main
    exorad-plot=exorad.utils.plotter:main [Plot]
